tests/ui/traits/next-solver/assembly/ambiguity-due-to-uniquification-1.next.stderr
error[E0283]: type annotations needed: cannot satisfy `dyn D<&(), &()>: B<&()>`
  --> $DIR/ambiguity-due-to-uniquification-1.rs:15:31
   |
LL |     (&() as &dyn D<&(), &()>).f()
   |                               ^
   |
   = note: cannot satisfy `dyn D<&(), &()>: B<&()>`
   = help: the trait `B<C>` is implemented for `()`
note: required by a bound in `D::f`
  --> $DIR/ambiguity-due-to-uniquification-1.rs:10:16
   |
LL | trait D<C, E>: B<C> + B<E> {
   |                ^^^^ required by this bound in `D::f`
LL |     fn f(&self) {}
   |        - required by a bound in this associated function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
